--- a/style.css
+++ b/style.css
@@ -19,6 +19,23 @@
   color: var(--color-white); 
 }
 
+.blue__container::before{/*a animação vai usuar essa pseudo classe para fazer
+  animação de transição */
+  content: "";
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-blueligth);
+  width: 26rem;
+  height: var(--height);
+  color: var(--color-white); 
+
+  left: 0%;
+
+}
+
 .blue__container span{
   font-size: 2rem;
 }
@@ -122,6 +139,24 @@
  position: absolute;
  display: flex;
  margin-top: 10rem;
+}
+
+.btn__login:hover{
+  background: var(--color-green);
+  color: var(--color-white);
+}
+
+.blue__container-register{
+  /*Aqui é o conteundo de informação do register
+  durante a animação, a pseudo classe vai sobrepor*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #54c4cc;
+  width: 26rem;
+  height: var(--height);
+  color: var(--color-white);
 }
 
 
